--- a/style.css
+++ b/style.css
@@ -30,16 +30,15 @@ body{
 }
 
 .textBox{
+    position: absolute;
+    z-index: 1;
+    top:650px;
+    left:400px;
     margin: 10px;
     padding: 0.5rem;
     border-radius: 10px;
-    width: 30rem;
     opacity: 0;
     background-color: dimgrey;
-
-}
-
-.message{
 
 }
 
@@ -82,7 +81,7 @@ body{
 
 .radio_btn{
     position:absolute;
-    top: 455px;
+    top: 350px;
     left: 200px;
     z-index: 1;
     width:250px;
